feat: added get transactions of a type API
